--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -34,23 +34,20 @@
 
 @media screen and (max-width: 1024px) {
   .cover__background {
-  max-width: 1024px;
-  max-height: 640px;
+  min-height: 640px;
   }
 }
 
 @media screen and (max-width: 768px) {
   .cover__background {
-    max-width: 768px;
-    max-height: 480px;
+    min-height: 480px;
   }
 }
-
 
 @media screen and (max-width: 320px) {
   .cover__background {
     justify-content: flex-start;
-    max-width: 320px;
-    max-height: 200px;
+    min-height: 200px;
+    overflow: hidden;
     }
 }
