--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -15,7 +15,10 @@
 
 @media screen and (max-width: 320px) {
   .cover__title {
+    max-width: 288px;
     margin-top: 33px;
     margin-bottom: 16px;
+    font-size: 32px;
+    line-height: 35px;
   }
 }
