--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -7,11 +7,20 @@
     font-size: 24px;
     line-height: 28px;
     text-align: right;
-    text-decoration-line: underline;
     color: #FFFFFF;
     transition: 0.3s ease-in;
+    text-decoration: none;
   }
   
   .header__lang-link:hover{
     opacity: 0.8;
+  }
+
+  @media screen and (max-width: 320px) {
+    .header__lang-link {
+      max-width: 22px;
+      max-height: 20px;
+      font-size: 18px;
+      line-height: 20px;
+    }
   }
