--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,4 +1,3 @@
-/* 1280, 1024 */
 .header {
   display: flex;
   flex-direction: row;
@@ -8,4 +7,23 @@
   width: calc(100% - 96px);
   justify-content: space-between;
   box-sizing: border-box;
+}
+
+@media screen and (max-width: 1024px) {
+  .header {
+    max-width: 928px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .header {
+    width: calc(100% - 48px);
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .header {
+    width: calc(100% - 32px);
+    max-width: 320px
+  }
 }
