--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,8 +1,9 @@
 .intro__text {
-  margin: 0 0 33px 0;
+  margin: 0;
+  padding: 0;
+  margin-bottom: 33px;
   padding-bottom: 33px;
   max-width: 690px;
-  max-height: 208px;
   font-family: "Inter";
   font-weight: 400;
   font-style: normal;
@@ -12,19 +13,18 @@
 
 @media screen and (max-width: 1024px) {
   .intro__text {
-    margin-left: 48px;
+    margin-bottom: 28px;
   }
 }
 
 @media screen and (max-width: 768px) {
   .intro__text {
-    margin-left: 24px;
+    margin-bottom: 33px;
   }
 }
 
 @media screen and (max-width: 320px) {
   .intro__text {
     margin-bottom: 34px;
-    margin-left: 16px;
   }
 }
