--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,28 +1,19 @@
-/* 1280, 1024 */
+
 .intro__title {
   display: flex;
-  width: 690px;
-  height: 58px;
+  max-width: 690px;
+  height: auto;
   margin: 0 0 40px 0;
   padding: 0;
-  font-family: "Inter";
+  font-family: "Inter", "Arial ", sans-serif;
   font-weight: 900;
   font-style: normal;
   font-size: 54px;
   line-height: 58px;
   }
 
-/* 768 */
-@media screen and (max-width: 768px) {
-  .intro__title {
-    margin-left: 24px;
-  }
-}
-
-/* 320 */
 @media screen and (max-width: 320px) {
   .intro__title {
-    margin-left: 16px;
     font-size: 32px;
     line-height: 35px;
   }
