--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,18 +1,15 @@
-/* 1280 */
 .intro {
   margin: 0 auto;
   margin-bottom: 92px;
   width: calc(100% - 2*148px);
   }
 
-/* 1024 */
 @media screen and (max-width: 1024px) {
   .intro {
     width: calc(100% - 2*48px);
     }
 }
 
-/* 768 */
 @media screen and (max-width: 768px) {
   .intro {
     margin-bottom: 88px;
@@ -20,10 +17,11 @@
     }
 }
 
-/* 320 */
 @media screen and (max-width: 320px) {
   .intro {
     margin-bottom: 64px;
+    margin-left: 16px;
     width: calc(100% - 2*16px);
+    max-width: 288px;
     }
 }
