--- a/blocks/page/__header/page__header.css
+++ b/blocks/page/__header/page__header.css
@@ -3,3 +3,15 @@
     padding-top: 28px;
     margin-bottom: 56px;
   }
+
+@media screen and (max-width: 1024px) {
+  .page__header {
+    margin-bottom: 48px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .page__header {
+    padding-top: 16px;
+  }
+}
