--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -15,6 +15,7 @@
 @media screen and (max-width: 1024px) {
   .photo-grid {
     max-width: 928px;
+    max-height: 942px;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 14px;
   }
@@ -24,8 +25,8 @@
 @media screen and (max-width: 768px) {
   .photo-grid {
     max-width: 720px;
+    max-height: 1664px;
     margin-bottom: 88px;
-    width: calc(100% - 2*24px);
     grid-template-columns: repeat(auto-fit, minmax(352px, 1fr));
     gap: 16px;
   }
@@ -33,8 +34,9 @@
 
 @media screen and (max-width: 320px) {
   .photo-grid {
+    max-width: 288px;
+    max-height: 2724px;
     margin-bottom: 64px;
-    width: calc(100% - 2*16px);
     gap: 12px;
     grid-template-columns: repeat(auto-fit, minmax(288px, 1fr));
   }
