--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -28,6 +28,11 @@
 /* 320 */
 @media screen and (max-width: 320px) {
   .place {
-    column-gap: 32px;
+    display: flex;
+    max-width: 320px;
+    max-height: 1042px;
+    flex-direction: column;
+    margin: 0 auto;
+    row-gap: 0;
   }
 }
