--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,6 +1,6 @@
 
 .places {
-  margin: 0 auto;
+  margin: 0;
   padding: 0;
   width: calc(100% - 2*148px);
 }
@@ -9,7 +9,6 @@
 @media screen and (max-width: 1024px) {
   .places {
     width: calc(100% - 2*48px);
-    margin-left: 48px;
   }
 }
 
