--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -24,6 +24,6 @@
 @media screen and (max-width: 320px) {
   .header {
     width: calc(100% - 32px);
-    max-width: 320px
+    max-width: 288px;
   }
 }
