--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -13,9 +13,10 @@
   z-index: 1;
 }
 
-@media screen and (max-width: 3200px) {
+@media screen and (max-width: 320px) {
   .cover__subtitle {
     max-width: 288px;
+    min-height: 70px;
     font-size: 14px;
     line-height: 16px;
   }
