--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -9,6 +9,11 @@
   box-sizing: border-box;
   }
 
+@media screen and (max-width: 1024px) {
+    .footer {
+      width: calc(100% - 2*48px);
+    }
+  }
 @media screen and (max-width: 768px) {
   .footer {
     width: calc(100% - 2*24px);
