--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,7 +1,7 @@
 .header__lang-link {
-    margin: 0 18px 6px 0;
+    margin: 0;
     padding: 0;
-    font-family: "Inter";
+    font-family: "Inter", "Arial ", sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 24px;
@@ -11,10 +11,11 @@
     transition: 0.3s ease-in;
     text-decoration: none;
   }
-  
+
   .header__lang-link:hover{
     opacity: 0.8;
   }
+
 
   @media screen and (max-width: 320px) {
     .header__lang-link {
