--- a/blocks/header/__lang-links/header__lang-links.css
+++ b/blocks/header/__lang-links/header__lang-links.css
@@ -1,8 +1,7 @@
 .header__lang-links {
     display: flex;
-    flex-direction: row;
-    margin: 18px 0 0;
+    margin: 20px 0 0 0;
     padding: 0;
+    flex-direction: row;
     list-style: none;
-    margin-left: 84px;
     }
