--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -2,9 +2,8 @@
   margin: 0;
   padding: 0;
   margin-bottom: 33px;
-  padding-bottom: 33px;
-  max-width: 690px;
-  font-family: "Inter";
+  max-width: 720px;
+  font-family: "Inter", "Arial ", sans-serif;
   font-weight: 400;
   font-style: normal;
   font-size: 16px;
