--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,10 +1,9 @@
-/* 1280 */
 .lead__subtitle {
   display: flex;
   margin: 0 auto 64px;
   padding: 0;
   max-width: 640px;
-  font-family: "Inter", "Arial";
+  font-family: "Inter", "Arial ", sans-serif;
   font-weight: 400;
   font-style: normal;
   font-size: 30px;
@@ -12,14 +11,12 @@
   text-align: center;
   }
 
-/* 1024, 768 */
 @media screen and (max-width: 1024px) {
   .lead__subtitle {
     margin-bottom: 56px;
   }
 }
 
-/* 320 */
 @media screen and (max-width: 320px) {
   .lead__subtitle {
     margin-bottom: 40px;
