--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,10 +1,9 @@
-/* 1280, 1024 */
 .lead__title {
   display: flex;
   margin: 0 auto 32px;
   padding: 0;
   max-width: 720px;
-  font-family: "Inter","Arial";
+  font-family: "Inter", "Arial ", sans-serif;
   font-weight: 900;
   font-style: normal;
   font-size: 96px;
@@ -18,6 +17,5 @@
     max-width: 288px;
     font-size: 40px;
     line-height: 44px;
-    
-  }
+    }
 }
