--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -8,5 +8,9 @@
   line-height: 22px;
   color: #FFFFFF;
   text-decoration-line: underline;
+  transition: 0.3s ease-in;
 }
 
+.place__link:hover {
+  opacity: 0.8;
+}
