--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -17,15 +17,15 @@
 }
 
 @media screen and (max-width: 768px) {
-  .content__cover {
+  .cover {
     margin-top: 90px;
     margin-bottom: 88px;
   }
 }
 
 @media screen and (max-width: 320px) {
-  .content__cover {
-    margin-top: 16px;
+  .cover {
+    margin-top: 66px;
     margin-bottom: 64px;
   }
 }
