--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,7 +1,6 @@
 .footer__link {
   margin: 0 18px 0 0;
   padding: 0;
-  display: inline-block;
   font-family: "Inter", "Arial ", sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -21,6 +20,7 @@
   .footer__link {
     font-size: 24px;
     line-height: 24px;
-    margin-bottom: 32px;
+    margin: 0 18px 32px 0;
+    display: inline-block;
   }
 }
