--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -4,6 +4,8 @@
   padding: 0;
   max-width: 460px;
   max-height: 460px;
+  object-fit: cover;
+  display: block;
 }
 
 @media screen and (max-width: 1024px) {
@@ -25,6 +27,5 @@
     width: 320px;
     height: 320px;
     margin-bottom: 32px;
-    object-fit: cover;
   }
 }
