--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,6 +1,7 @@
 .place__title {
   margin: 0;
   padding: 0;
+  max-width: 460px;
   font-family: "Inter", "Arial ", sans-serif;
   font-weight: 900;
   font-style: normal;
@@ -10,6 +11,7 @@
 
 @media screen and (max-width: 768px) {
   .place__title {
+    max-width: 340px;
     font-size: 42px;
     line-height: 46px;
   }
@@ -17,8 +19,9 @@
 
 @media screen and (max-width: 320px) {
   .place__title {
-    margin: 0 auto 32px;
-    width: calc(100% - 2*16px);
+    margin-left: 16px;
+    margin-bottom: 32px;
+    max-width: 288px;
     font-size: 32px;
     line-height: 35px;
   }
