--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -6,7 +6,9 @@
 
 @media screen and (max-width: 320px) {
   .place__website {
-    margin-bottom:32px;
-    width: calc(100% - 2*16px);
+    max-width: 288px;
+    margin-left: 16px;
+    margin-bottom: 32px;
+    align-self: flex-start;
   }
 }
