--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -45,6 +45,13 @@
   }
 }
 
+@media screen and (max-width: 640px) {
+  .cover__background {
+    justify-content: flex-start;
+    min-height: 200px;
+    }
+}
+
 @media screen and (max-width: 320px) {
   .cover__background {
     justify-content: flex-start;
