--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -14,6 +14,17 @@
   z-index: 1;
 }
 
+@media screen and (max-width: 640px) {
+  .cover__title {
+    max-width: 288px;
+    min-height: 70px;
+    margin-top: 33px;
+    margin-bottom: 16px;
+    font-size: 32px;
+    line-height: 35px;
+  }
+}
+
 @media screen and (max-width: 320px) {
   .cover__title {
     max-width: 288px;
