--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -6,6 +6,13 @@
   flex-wrap: wrap;
 }
 
+@media screen and (max-width: 640px) {
+  .footer__links {
+    flex-direction: column;
+    margin-bottom: 16px;
+  }
+}
+
 @media screen and (max-width: 320px) {
   .footer__links {
     flex-direction: column;
