--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -20,6 +20,15 @@
   }
 }
 
+@media screen and (max-width: 640px) {
+  .footer {
+    width: 100%;
+    flex-direction: column;
+    align-items: flex-start;
+    padding-left: 16px;
+  }
+}
+
 @media screen and (max-width: 320px) {
   .footer {
     width: 100%;
