--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,4 +1,4 @@
-.lead__title {
+.lead__title {  
   display: flex;
   margin: 0 auto 32px;
   padding: 0;
@@ -11,6 +11,14 @@
   text-align: center;
 }
 
+@media screen and (max-width: 740px) {
+  .lead__title {
+    margin-bottom: 16px;
+    max-width: 288px;
+    font-size: 40px;
+    line-height: 44px;
+    }
+}
 @media screen and (max-width: 320px) {
   .lead__title {
     margin-bottom: 16px;
