--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -29,6 +29,15 @@
   }
 }
 
+@media screen and (max-width: 640px) {
+  .photo-grid {
+    max-width: 288px;
+    margin-bottom: 64px;
+    gap: 12px;
+    grid-template-columns: repeat(auto-fit, minmax(288px, 1fr));
+  }
+}
+
 @media screen and (max-width: 320px) {
   .photo-grid {
     max-width: 288px;
