--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -21,6 +21,13 @@
   }
 }
 
+@media screen and (max-width: 640px) {
+  .places {
+    margin: 0;
+    width: 100%;
+  }
+}
+
 /* 320 */
 @media screen and (max-width: 320px) {
   .places {
