--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,21 +1,14 @@
 .photo-grid {
-  display: grid;
-  margin: 0 auto;
+  margin: 0 auto 92px;
   padding: 0;
-  margin-bottom: 92px;
   max-width: 1184px;
-  width: 100%;
-  list-style-type: none;
-  grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
-  gap: 16px;
+  width: calc(100% - 2*48px);
 }
 
 
 @media screen and (max-width: 1024px) {
   .photo-grid {
     max-width: 928px;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 14px;
   }
 }
 
@@ -23,26 +16,14 @@
 @media screen and (max-width: 768px) {
   .photo-grid {
     max-width: 720px;
+    width: calc(100% - 2*24px);
     margin-bottom: 88px;
-    grid-template-columns: repeat(auto-fit, minmax(352px, 1fr));
-    gap: 16px;
   }
 }
 
-@media screen and (max-width: 640px) {
+@media screen and (max-width: 480px) {
   .photo-grid {
-    max-width: 288px;
+    width: calc(100% - 2*16px);
     margin-bottom: 64px;
-    gap: 12px;
-    grid-template-columns: repeat(auto-fit, minmax(288px, 1fr));
-  }
-}
-
-@media screen and (max-width: 320px) {
-  .photo-grid {
-    max-width: 288px;
-    margin-bottom: 64px;
-    gap: 12px;
-    grid-template-columns: repeat(auto-fit, minmax(288px, 1fr));
   }
 }
