--- a/pages/index.css
+++ b/pages/index.css
@@ -28,6 +28,7 @@
 
 @import url(../blocks/photo-grid/photo-grid.css);
 @import url(../blocks/photo-grid/__item/photo-grid__item.css);
+@import url(../blocks/photo-grid/__element/photo-grid__element.css);
 
 @import url(../blocks/places/places.css);
 @import url(../blocks/place/place.css);
