--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -18,18 +18,10 @@
 
 @media screen and (max-width: 640px) {
   .footer__link {
+    display: flex;
+    flex-direction: column;
     font-size: 24px;
     line-height: 24px;
-    margin: 0 18px 32px 0;
-    display: inline-block;
-  }
-}
-
-@media screen and (max-width: 320px) {
-  .footer__link {
-    font-size: 24px;
-    line-height: 24px;
-    margin: 0 18px 32px 0;
-    display: inline-block;
+    margin-bottom: 32px;
   }
 }
