--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -11,18 +11,24 @@
 
 @media screen and (max-width: 768px) {
   .place__title {
-    max-width: 340px;
+    max-width: 330px;
     font-size: 42px;
     line-height: 46px;
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 640px) {
   .place__title {
     margin-left: 16px;
     margin-bottom: 32px;
-    max-width: 288px;
+    max-width: 500px;
     font-size: 32px;
     line-height: 35px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .place__title {
+    max-width: 288px;
   }
 }
