--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,49 +1,34 @@
-/* 1280 */
 .place {
-  margin: 0;
-  padding: 0;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: auto;
-  column-gap: 40px;
-  row-gap: 48px;
-  margin-bottom: 80px;
+  max-width: 984px;
+  grid-template-columns: minmax(min-content, 460px) minmax(min-content, 484px);
+  gap: 3rem 2.5rem;
+  margin: 0 0 5rem;
 }
 
-/* 1024 */
+.place:last-child {
+  margin-bottom: 0;
+}
+
 @media screen and (max-width: 1024px) {
   .place {
-    column-gap: 32px;
+    grid-template-columns: minmax(min-content, 440px) minmax(min-content, 456px);
+    gap: 3rem 2rem;
+    margin: 0 auto calc(4.5rem + (100vw - 768px) / (1024 - 768) * (80 - 72));
   }
 }
 
-/* 768 */
 @media screen and (max-width: 768px) {
   .place {
-    column-gap: 28px;
-    row-gap: 48px;
+    grid-template-columns: minmax(min-content, 340px) minmax(min-content, 352px);
+    gap: 3rem 1.75rem;
+    margin: 0 auto calc(3.125rem + (100vw - 320px) / (768 - 320) * (72 - 50));
   }
 }
 
-@media screen and (max-width: 640px) {
+@media screen and (max-width: 540px) {
   .place {
-    display: flex;
-    margin: 0 auto 50px;
-    max-width: 320px;
-    max-height: 1042px;
-    flex-direction: column;
-    row-gap: 0;
-  }
-}
-
-/* 320 */
-@media screen and (max-width: 320px) {
-  .place {
-    display: flex;
-    margin: 0 auto 50px;
-    max-width: 320px;
-    max-height: 1042px;
-    flex-direction: column;
-    row-gap: 0;
+    grid-template-columns: minmax(min-content, max-content);
+    gap: 2rem;
   }
 }
