--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -3,8 +3,8 @@
   padding: 0;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   color: #fff;
+  justify-content: center;
   text-decoration: none;
   position: relative;
   width: 100%;
@@ -47,13 +47,16 @@
 
 @media screen and (max-width: 640px) {
   .cover__background {
-    justify-content: flex-start;
+    justify-content: center;
     min-height: 350px;
   }
 }
 
 @media screen and (max-width: 320px) {
   .cover__background {
+    justify-content: center;
+    gap: 16px;
+    margin: 0px auto 0px;
     min-height: 200px;
     }
 }
