--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -15,6 +15,7 @@
 
 @media screen and (max-width: 640px) {
   .cover__subtitle {
+    margin: 0px auto 0px;
     max-width: 288px;
     font-size: 14px;
     line-height: 16px;
