--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,7 +1,7 @@
 .footer {
   display: flex;
   flex-wrap: wrap;
-  margin: 0 auto;
+  margin: 0 48px;
   padding: 0 0 24px;
   max-width: 1184px;
   flex-direction: row;
@@ -16,15 +16,16 @@
   }
 @media screen and (max-width: 768px) {
   .footer {
+    margin: 0 24px;
     width: calc(100% - 2*24px);
   }
 }
 
-@media screen and (max-width: 640px) {
-  .footer {
-    width: 100%;
-    flex-direction: column;
-    align-items: flex-start;
-    padding-left: 16px;
+@media screen and (max-width: 540px) {
+  .footer { 
+    min-width: 186px;
+    flex-direction: column; 
+    align-items: flex-start; 
+    margin-left: 16px; 
   }
 }
