--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -3,26 +3,28 @@
   padding: 0;
   max-width: 1184px;
   width: calc(100% - 2*48px);
+  grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
 }
-
 
 @media screen and (max-width: 1024px) {
   .photo-grid {
     max-width: 928px;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   }
 }
-
 
 @media screen and (max-width: 768px) {
   .photo-grid {
     max-width: 720px;
     width: calc(100% - 2*24px);
     margin-bottom: 88px;
+    grid-template-columns: repeat(auto-fit, minmax(352px, 1fr));
   }
 }
 
 @media screen and (max-width: 480px) {
   .photo-grid {
+    grid-template-columns: repeat(auto-fit, minmax(288px, 1fr));
     width: calc(100% - 2*16px);
     margin-bottom: 64px;
   }
