--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -20,7 +20,7 @@
 @media screen and (max-width: 640px) {
   .place__title {
     margin-left: 16px;
-    margin-bottom: 32px;
+    margin-bottom: 0;
     max-width: 500px;
     font-size: 32px;
     line-height: 35px;
